--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL=http://localhost:4000/api/v1
+REACT_APP_BASE_URL=https://studynotion-be-c1zj.onrender.com/api/v1
 REACT_APP_RAZORPAY_KEY_ID=rzp_test_xeETaNXXXABfyh
