--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,54 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build output
+dist/
+build/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# dotenv environment variables
+.env
+.env.*      # for .env.local, .env.development, etc.
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# VS Code settings
+.vscode/
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Next.js
+.next/
+
+# React Native
+.expo/
+.expo-shared/
+
+# Svelte
+.svelte/
+
+# Parcel
+.cache/
+
+# Optional: macOS trash
+.Trashes
+
+# Optional: Local database files
+*.sqlite
+*.db
+
+# Optional: JetBrains IDEs
+.idea/
