--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,3 @@
-# Node modules
-node_modules/
-
-# Build output
-dist/
-build/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# dotenv environment variables
+node_modules
 .env
-.env.*      # for .env.local, .env.development, etc.
-
-# OS-specific
-.DS_Store
-Thumbs.db
-
-# VS Code settings
-.vscode/
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Next.js
-.next/
-
-# React Native
-.expo/
-.expo-shared/
-
-# Svelte
-.svelte/
-
-# Parcel
-.cache/
-
-# Optional: macOS trash
-.Trashes
-
-# Optional: Local database files
-*.sqlite
-*.db
-
-# Optional: JetBrains IDEs
-.idea/
+package-lock.json
